# pymanager

./: .gitignore  DOCUMENTATION.md  GEMINI.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: CommandPalette.tsx  HygieneOverlay.tsx  Sidebar.tsx
src/components/Studio/: StudioAutomation.tsx  StudioConfig.tsx  StudioDependencyGraph.tsx  StudioDependencyTree.tsx  StudioDeploy.tsx  StudioDiagnostics.tsx  StudioPackages.tsx
src/constants/: templates.ts  ui.ts
src/hooks/: useAppController.ts  useToastMessages.ts
src/services/: db.ts  packageManager.ts
src/types/: index.ts
