[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0.0", features = [] }

[dependencies]
tauri = { version = "=2.0.0", features = [] }
tauri-runtime = "=2.0.0"
tauri-utils = "=2.0.0"
tauri-plugin-opener = "=2.0.0"
tauri-plugin-dialog = "=2.0.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fix transitive dependencies for Rust 1.85.1
time = "=0.3.36"
zbus = "=4.4.0"
zvariant = "=4.2.0"
fs_extra = "1.3.0"
reqwest = { version = "0.12.0", features = ["json"] }
tokio = { version = "1.0.0", features = ["full"] }
walkdir = "2.5.0"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
dirs = "6.0"
